3. From Pramitha | Deliver page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,5 +131,7 @@
     <string name="EnterOrderResourceLink">Copy here Your Order Resources Drive Link</string>
 
     <string name="ordersuccessfull">Order Added Successfully</string>
+    <string name="OK">OK</string>
+    <string name="processingorder">Processing Order</string>
 
 </resources>
