2020/09/28 update to hershel

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,16 +125,19 @@
     <string name="seventhgig">WebDesigning</string>
     <string name="welcome">Welcome</string>
     <string name="createyourgig">Create Your Gig</string>
-    <string name="addimg">AddImage</string>
+    <string name="addimg">Add Image</string>
     <string name="gigtitle">Enter GigTitle</string>
     <string name="gigcategory">Enter Gig Category</string>
     <string name="gigdes">Enter Gig Description</string>
     <string name="deliveryinfo">Enter Delivery Information</string>
-    <string name="pricinginfo">Enter Pricing Information</string>
+    <string name="advance_amount">Enter Advance Amount</string>
+    <string name="second_amount">Enter Second Payment</string>
     <string name="condetails">Enter Contact Details</string>
     <string name="addthisgig">Add Gig</string>
+    <string name="purchase">Purchase</string>
     <string name="viewgigforuser_topic">Graphic Designing</string>
     <string name="view_gig_user_addimg">Gig Title</string>
+    <string name="fetching_data">Fetching data</string>
     <string name="view_user_graphicdesigning">I\'m Creating Any kind of graphic designing projects for you</string>
     <string name="view_user_gigcat">Gig Category</string>
     <string name="hint2">Graphic Designing</string>
@@ -150,6 +153,11 @@
     <string name="topic6">Pricing Information</string>
     <string name="updatebutton">Update</string>
     <string name="deletebutton">Delete</string>
+    <string name="advance_amount_topic">Advance Amount</string>
+    <string name="price">Price</string>
+    <string name="empty_list">Oops ! No records found..</string>
+    <string name="second_payment">Second Payment</string>
+    <string name="contact">Contact Number</string>
     <string name="show_more">Show more</string>
     <string name="updatepage_saveupdate_btm">Save Changes</string>
     <string name="purchasegigbutton">Purchase</string>
