--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">OnlineFreelaceAPP</string>
-    <string name="logo_name">On Line</string>
+    <string name="app_name">On Line</string>
+    <string name="logo_name">OnlineFreelaceAPP</string>
     <string name="slogo_name">The Freelancing App!</string>
     <string name="dashboard_name">The Freelancing App</string>
     <string name="powered_by">Powered By Gray Matter Developers</string>
